{
  "version": 4,
  "terraform_version": "1.12.2",
  "serial": 8,
  "lineage": "0b67b692-ab33-0f72-b08c-3fca7d838612",
  "resources": [
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "rover_dev_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].primary_east",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:886436933815:internet-gateway/igw-0496985ba93914924",
            "id": "igw-0496985ba93914924",
            "owner_id": "886436933815",
            "region": "us-east-1",
            "tags": {
              "Name": "rove_dev_igw"
            },
            "tags_all": {
              "Name": "rove_dev_igw"
            },
            "vpc_id": "vpc-0753c58500f2d27d4"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.rover_vpc_east"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "rover_dev_nacl",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].primary_east",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:886436933815:network-acl/acl-06a411e14c8a2580e",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-06a411e14c8a2580e",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "886436933815",
            "region": "us-east-1",
            "subnet_ids": [
              "subnet-078974845ac4cab20",
              "subnet-0aaf7602afa7e4dad"
            ],
            "tags": {
              "Name": "rover_dev_nacl"
            },
            "tags_all": {
              "Name": "rover_dev_nacl"
            },
            "vpc_id": "vpc-0753c58500f2d27d4"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.rover_vpc_east"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_association",
      "name": "network_acl_association_subnet_1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].primary_east",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "aclassoc-068894c4efc374672",
            "network_acl_id": "acl-06a411e14c8a2580e",
            "region": "us-east-1",
            "subnet_id": "subnet-0aaf7602afa7e4dad"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_network_acl.rover_dev_nacl",
            "module.vpc.aws_subnet.rover_public_subent-1a",
            "module.vpc.aws_vpc.rover_vpc_east"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_association",
      "name": "network_acl_association_subnet_1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].primary_east",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "aclassoc-01860865558aef29a",
            "network_acl_id": "acl-06a411e14c8a2580e",
            "region": "us-east-1",
            "subnet_id": "subnet-078974845ac4cab20"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_network_acl.rover_dev_nacl",
            "module.vpc.aws_subnet.rover_public_subent-1b",
            "module.vpc.aws_vpc.rover_vpc_east"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rover_dev_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].primary_east",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:886436933815:route-table/rtb-0eaeb11b0d7b472a0",
            "id": "rtb-0eaeb11b0d7b472a0",
            "owner_id": "886436933815",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0496985ba93914924",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "rover_dev_rt"
            },
            "tags_all": {
              "Name": "rover_dev_rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0753c58500f2d27d4"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "886436933815",
            "id": "rtb-0eaeb11b0d7b472a0",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.rover_dev_igw",
            "module.vpc.aws_vpc.rover_vpc_east"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "route_table_association_1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].primary_east",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f710248f38a5a13e",
            "region": "us-east-1",
            "route_table_id": "rtb-0eaeb11b0d7b472a0",
            "subnet_id": "subnet-0aaf7602afa7e4dad"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "886436933815",
            "id": "rtbassoc-0f710248f38a5a13e",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.rover_dev_igw",
            "module.vpc.aws_route_table.rover_dev_rt",
            "module.vpc.aws_subnet.rover_public_subent-1a",
            "module.vpc.aws_vpc.rover_vpc_east"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "route_table_association_1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].primary_east",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-045802e8261387aa2",
            "region": "us-east-1",
            "route_table_id": "rtb-0eaeb11b0d7b472a0",
            "subnet_id": "subnet-078974845ac4cab20"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "886436933815",
            "id": "rtbassoc-045802e8261387aa2",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.rover_dev_igw",
            "module.vpc.aws_route_table.rover_dev_rt",
            "module.vpc.aws_subnet.rover_public_subent-1b",
            "module.vpc.aws_vpc.rover_vpc_east"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rover_dev_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].primary_east",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:886436933815:security-group/sg-0d77ea7cb2f03d30d",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d77ea7cb2f03d30d",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "rover_dev_sg",
            "name_prefix": "",
            "owner_id": "886436933815",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "rover_dev_sg"
            },
            "tags_all": {
              "Name": "rover_dev_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0753c58500f2d27d4"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "886436933815",
            "id": "sg-0d77ea7cb2f03d30d",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.rover_vpc_east"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "rover_public_subent-1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].primary_east",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:886436933815:subnet/subnet-0aaf7602afa7e4dad",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "11.0.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0aaf7602afa7e4dad",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "886436933815",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "rover_dev_public_subnet_1a"
            },
            "tags_all": {
              "Name": "rover_dev_public_subnet_1a"
            },
            "vpc_id": "vpc-0753c58500f2d27d4"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "886436933815",
            "id": "subnet-0aaf7602afa7e4dad",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.rover_vpc_east"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "rover_public_subent-1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].primary_east",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:886436933815:subnet/subnet-078974845ac4cab20",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "11.0.20.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-078974845ac4cab20",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "886436933815",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "rover_dev_public_subnet_1b"
            },
            "tags_all": {
              "Name": "rover_dev_public_subnet_1b"
            },
            "vpc_id": "vpc-0753c58500f2d27d4"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "886436933815",
            "id": "subnet-078974845ac4cab20",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.rover_vpc_east"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "rover_vpc_east",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].primary_east",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:886436933815:vpc/vpc-0753c58500f2d27d4",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "11.0.0.0/16",
            "default_network_acl_id": "acl-0e6c0e54b5bd22c2f",
            "default_route_table_id": "rtb-026aa99938683bad6",
            "default_security_group_id": "sg-061d398df1f980e09",
            "dhcp_options_id": "dopt-0d2957dcbe988b6d3",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0753c58500f2d27d4",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-026aa99938683bad6",
            "owner_id": "886436933815",
            "region": "us-east-1",
            "tags": {
              "Name": "rover_vpc_dev"
            },
            "tags_all": {
              "Name": "rover_vpc_dev"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "886436933815",
            "id": "vpc-0753c58500f2d27d4",
            "region": "us-east-1"
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "rover_dev_sg_egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].primary_east",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:886436933815:security-group-rule/sgr-0fb82665ec9f45fd2",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-0fb82665ec9f45fd2",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-1",
            "security_group_id": "sg-0d77ea7cb2f03d30d",
            "security_group_rule_id": "sgr-0fb82665ec9f45fd2",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "886436933815",
            "id": "sgr-0fb82665ec9f45fd2",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_security_group.rover_dev_sg",
            "module.vpc.aws_vpc.rover_vpc_east"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "rover_dev_sg_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].primary_east",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:886436933815:security-group-rule/sgr-01411b081db601867",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-01411b081db601867",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-1",
            "security_group_id": "sg-0d77ea7cb2f03d30d",
            "security_group_rule_id": "sgr-01411b081db601867",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "886436933815",
            "id": "sgr-01411b081db601867",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_security_group.rover_dev_sg",
            "module.vpc.aws_vpc.rover_vpc_east"
          ]
        }
      ]
    }
  ]
}